<resources>
    <string name="app_name">Invascan</string>
    <string name="button_identify_text">Detect</string>
    <string name="open_image">Open Image</string>
    <string name="load_image">Load Image</string>
    <string name="clear_all">Clear All</string>
    <string name="logo">Product Logo</string>
    <string name="identify_invasive_plant_title">Identify Invasive \n Plants</string>
    <string name="upload_image_title">Load an image</string>
    <string name="engine_response_title">DETECTION RESULTS</string>
    <string name="upload_image_description">Add an image you want to be analyzed for Pyracantha species</string>
    <string name="image_description">Image (PNG, JPG)</string>
    <string name="loading">Loading...</string>
    <string name="detected_name">Name:</string>
    <string name="detected_score">Score: </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google_maps_api_key">AIzaSyBgrmfV2fQfyLD863JpRjLiX3fia9-jldw</string>
    <string name="camera_image">Camera Image</string>
    <string name="footer_text">©2025 invascan solutions</string>
    <string name="default_image_description">"Image description "</string>
    <string name="username_or_email">Enter Username or Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="login_portal">Login Portal</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="create_account_portal">Create Account</string>
    <string name="person_name">Enter name</string>
    <string name="person_surname">Enter surname</string>
    <string name="person_email">Enter email address</string>
    <string name="person_phone">Enter phone number</string>
    <string name="person_occupation">Select Occupation</string>
    <string name="person_experience">Select experience level</string>
    <string name="confirm_password">Confirm password</string>
    <string name="person_image_sharing_consent">Image sharing consent?</string>
    <string name="image_sharing_consent_yes">Yes</string>
    <string name="image_sharing_consent_no">No</string>
    <string name="person_address">Enter Residential Address</string>
    <string name="person_create_account">Submit</string>
    <string name="enter_username">Enter username</string>
    <string name="image_detections">Analyze Plant Image</string>
    <string name="analytics_title">Analytics</string>
    <string name="community_title">Community</string>
    <string name="profile_title">Profile Maintenance</string>
    <string name="app_version">Version</string>
    <string name="app_footer">&#169; 2025 Invascan Systems</string>
    <string name="detections_by_province">Detections by Province</string>
    <string name="heat_map">Heat Map</string>
    <string name="bar_chart">View Bar Chart</string>
    <string name="pie_chart">View Pie Chart</string>
    <string name="image_options">Choose Image Source</string>
    <string name="custom_dotted_divider">------------------</string>
    <string name="results_image_description">Detection results to be displayed here indicating if there was any pyracantha detected on the provided image.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

</resources>