<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--#region Logo -->
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@id/loginContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
            <!--#endregion -->

            <LinearLayout
                android:id="@+id/loginContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:elevation="4dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/logoImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/textViewTittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/login_portal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/constraint_layout_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/username_or_email"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/baseline_person_24"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxStrokeColor="#0000FF"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTittle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/constraint_layout_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/baseline_lock_person_24"
                    app:startIconTint="@color/black"
                    app:endIconMode="password_toggle"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxStrokeColor="#0000FF"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintEnd_toEndOf="@+id/constraint_layout_username"
                    app:layout_constraintStart_toStartOf="@+id/constraint_layout_username"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_layout_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>




                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:layout_margin="24dp"
                    android:text="@string/login"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@android:color/white" />



            </LinearLayout>

            <!-- Sign Up Option -->
            <TextView
                android:id="@+id/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/green_900"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/loginContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>