<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_password_holder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/current_password"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/baseline_lock_person_24"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxStrokeColor="#0000FF"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_holder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/new_password"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/baseline_lock_person_24"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxStrokeColor="#0000FF"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password_holder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_holder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/baseline_lock_person_24"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxStrokeColor="#0000FF"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/change_password_notification"
        app:layout_constraintTop_toBottomOf="@+id/new_password_holder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/change_password_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:ellipsize="end"
        android:textColor="@color/c_red"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>