<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="2dp">

    <!-- Top Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputImageContainer"
        tools:ignore="MissingConstraints"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/title"
            android:layout_marginStart="0dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/identify_invasive_plant_title"
            android:textColor="@color/md_teal_800"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="0dp"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintStart_toEndOf="@id/logoImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <!-- Input Image Container -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputImageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:backgroundTint="@color/mcgpalette0_A200"
        app:layout_constraintTop_toBottomOf="@id/headerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="12dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputImageContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image_title"
            android:textColor="@color/c_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="0dp"
            android:gravity="start|center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cardDescription"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/cardDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image_description"
            android:textColor="@color/c_black"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_marginStart="0dp"
            android:gravity="start|center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardTitle"
            app:layout_constraintBottom_toTopOf="@id/inputImage"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/inputImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_photo_gray_24"
            android:background="@drawable/button_dotted_square"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <!-- Button Container -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/inputImageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainButtonsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnClearAll">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnLoadImageContainer"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:padding="1dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/button_info_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnIdentifyContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="0.8">
                <ImageView
                    android:id="@+id/customButtonIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/open_image"
                    android:src="@drawable/ic_open_folder"
                    app:tint="@color/twitter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/customButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="5dp" />
                <TextView
                    android:id="@+id/customButtonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/load_image"
                    android:textStyle="bold"
                    android:textColor="@color/twitter"
                    android:padding="10dp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/customButtonIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnIdentifyContainer"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:padding="1dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/button_primary_square"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnLoadImageContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1">
                <ImageView
                    android:id="@+id/btnIdentifyIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/open_image"
                    android:src="@drawable/baseline_image_search_24"
                    app:tint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnIdentifyText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="5dp" />
                <TextView
                    android:id="@+id/btnIdentifyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ai_identifier"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnIdentifyIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btnClearAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clear_all"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            android:backgroundTint="@color/warning_orange"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainButtonsContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Output Image Container -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/outputImageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:backgroundTint="@color/mcgpalette0_A200"
        app:strokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/buttonCardContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputImageContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/cardResponseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/engine_response_title"
                android:textColor="@color/c_black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="0dp"
                android:gravity="start|center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/outputImage"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/outputImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_photo_gray_24"
                android:background="@drawable/button_dotted_square"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardResponseTitle"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txtLabelNameTitle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                android:text="@string/detected_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/outputImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"/>

            <TextView
                android:id="@+id/txtLabelName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                android:text="......."
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/outputImage"
                app:layout_constraintStart_toEndOf="@+id/txtLabelNameTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"/>

            <TextView
                android:id="@+id/txtLabelScoreTitle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                android:text="@string/detected_score"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLabelNameTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"/>

            <TextView
                android:id="@+id/txtLabelScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                android:text="....."
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLabelName"
                app:layout_constraintStart_toEndOf="@+id/txtLabelScoreTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>